# mastodon-wordcloud

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  UPDATELOG.md  WordCloud.py  WordCloud_Beta.py  dic_compile.sh  emoji_aggregate.py  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: automate-dependabot.yml  ci.yml
dic/: gensokyo_town_terms.csv  touhou_character_names.csv  touhou_doujin_terms.csv  touhou_music_names.csv  touhou_spell_card_names.csv  touhou_terms.csv  touhou_work_names.csv
dictionary/: gensokyo_cloud_terms.csv  gensokyo_town_terms.csv  touhou_character_names.csv  touhou_doujin_terms.csv  touhou_music_names.csv  touhou_song_names.csv  touhou_spell_card_names.csv  touhou_terms.csv  touhou_work_names.csv  user.csv
src/: WordCloud.py  emoji_aggregate.py  setup.py  yearly_trend.py  yearly_wordcount.py
src/w2v/: plot.py  train.py
w2v/: plot.py
