[tool.poetry]
name = "mastodon-wordcloud"
version = "0.1.0"
description = ""
authors = ["kelvin27315"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kelvin27315/mastodon-wordcloud"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2.0.3"
mecab-python3 = "^1.0.8"
mastodon-py = "^1.8.1"
tqdm = "^4.66.1"
wordcloud = "^1.9.2"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"

[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = false
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 120
py_version = "py311"

[[tool.pysen.lint.mypy_targets]]
  paths = ["./src"]
